[project]
name = "noloox"
version = "0.1.0"
description = "Unsupervised learning algorithms you will need one day."
authors = [
    {name = "Márton Kardos",email = "power.up1163@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.16.0,<2.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "numpy (>=2.0.0)",
    "tqdm (>=4.0.0,<5.0.0)",
    "jax (>=0.8.0,<0.9.0)"
]

[project.optional-dependencies]
docs = [
  "griffe==0.40.0",
  "mkdocs==1.6.1",
  "mkdocs-autorefs==0.5.0",
  "mkdocs-material==9.6.19",
  "mkdocs-material-extensions==1.3.1",
  "mkdocstrings==0.22.0",
  "mkdocstrings-python==1.8.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
